# todoless

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  arc-search.json  index.html  linear-search.json  package.json  pnpm-lock.yaml  things3-search.json  todoless-ui-research.md
apps/app/: app.json  metro.config.js  package.json  tsconfig.json
apps/app/src/app/: _layout.tsx
apps/desktop/: .env.example  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  WidgetApp.tsx  styles.css
apps/desktop/src-tauri/: tauri.conf.json
apps/web/: .env.example  package.json  tsconfig.json
scripts/: patch-react-native-bun.mjs
src/: App.tsx  WidgetApp.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/chrome/: WindowChrome.tsx
src/components/settings/: SettingsModal.tsx
src/components/shell/: Rail.tsx  Sidebar.tsx
src/components/task/: TaskDetailCard.tsx  TaskItem.tsx  TaskList.tsx  TaskParts.tsx
src/components/toast/: ToastContainer.tsx
src/components/ui/: SelectMenu.tsx
src/components/view/: ViewSwitcher.tsx
src/components/voice/: VoiceCaptureBar.tsx  VoiceWidget.tsx
src/data/: seed.ts
src/hooks/: useDismissableLayer.ts  useScrollVisibility.ts  useVoiceCapture.ts
src/lib/: date.ts  ids.ts
src/services/: db.ts  senseVoiceModel.ts  voiceAgent.ts
src/stores/: settingsStore.ts  taskStore.ts  themeStore.ts  toastStore.ts
src/types/: agent.ts  task.ts
supabase/migrations/: 20260509152000_initial_sync.sql
(+42 files in other folders)
